--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
 
     <body>
         <header>
-
+            Header
         </header>
 
         <main>
-
+            Body
         </main>
-        
-        <footer>
 
+        <footer>
+            Footer
         </footer>
     </body>
 </html>
