--- a/placeholders/scripts.html
+++ b/placeholders/scripts.html
@@ -1,5 +1,3 @@
-<script src="./scripts/navigation.js">
-</script>
-
-<script src="./scripts/parralex.js">
-</script>
+version https://git-lfs.github.com/spec/v1
+oid sha256:ef68bfc665aa01dac209692c35618b1b570b8d01195b915ab4a05b44e64897a6
+size 96
