--- a/placeholders/footer.html
+++ b/placeholders/footer.html
@@ -1,72 +1,3 @@
-<footer>
-        <div>
-            <section>
-                <p>Area 1</p>
-                <p>Vestibulum accumsan elit vel dui varius efficitur. Mauris hendrerit fringilla arcu, quis elementum mi laoreet rhoncus. Nam sed quam et dui auctor venenatis. Phasellus nisl turpis, porttitor quis est quis, bibendum scelerisque risus. Donec nec rhoncus arcu. Nulla non neque metus. Donec accumsan ac neque dictum egestas. Aliquam posuere, arcu sed facilisis porttitor, risus tortor iaculis erat, ac mollis sem tellus quis eros. Quisque nec eros lectus. Morbi iaculis varius volutpat. Vivamus ullamcorper, nunc non malesuada faucibus, purus ipsum efficitur diam, vel posuere libero leo porttitor lorem. Maecenas sed molestie elit.</p>
-            </section>
-
-            <section>
-                    <p>Area 2</p>
-                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec quis iaculis lorem, vel tristique sapien. Pellentesque tristique auctor lacus, ac scelerisque sem tempor vel. Sed ullamcorper sed augue sed condimentum. In eleifend ullamcorper libero, in dapibus orci volutpat id. Vestibulum sed nunc neque. Suspendisse quis vestibulum lacus. Nullam tortor urna, molestie sit amet sollicitudin non, eleifend at ex. Duis dignissim nunc tincidunt lorem vehicula, vel congue sem gravida. Ut consequat, nibh in molestie consequat, magna velit congue quam, nec viverra turpis urna viverra nunc. Integer ullamcorper nibh a tortor ornare, non rhoncus nisi mollis. In hac habitasse platea dictumst. Maecenas ac posuere velit. In hac habitasse platea dictumst. Nam nec orci libero. Nulla ut leo finibus, pellentesque mauris id, consectetur lectus. </p>
-            </section>
-
-            <section>
-                    <p>Social</p>
-                    <ol>
-                        <a href="#">
-                            <li>
-                                Lorem
-                            </li>
-                        </a>
-                        <a href="#">
-                            <li>
-                                ipsum
-                            </li>
-                        </a>
-                        <a href="#">
-                             <li>
-                                magna
-                            </li>
-                        </a>
-                        <a href="#">
-                            <li>
-                                congue
-                            </li>
-                        </a>
-                    </ol>
-            </section>
-        </div>
-        <div class="misc">
-            <p>
-                Copyright 2018, Spaced
-            </p>
-
-            <ul>
-                <a href="#">
-                    <li>
-                        Contact
-                    </li>
-                </a>
-
-                <a href="#">
-                    <li>
-                        Trademark Policy
-                    </li>
-                </a>
-
-                <a href="#">
-                    <li>
-                        Terms of Service
-                    </li>
-                </a>
-
-                <a href="#">
-                    <li>
-                        Sitemap
-                    </li>
-                </a>
-            </ul>
-
-        </div>
-
-    </footer>
+version https://git-lfs.github.com/spec/v1
+oid sha256:bc7e2d70bbfe42f1aa387ce665a875a40b3e96c107cfb9f889a8c56f183d139e
+size 3243
