--- a/placeholders/header-bone.html
+++ b/placeholders/header-bone.html
@@ -1,58 +1,3 @@
-<div>
-        <nav class="header-main-logo page-navigation">
-                <ul>
-                    <a href="#">
-                        <li>
-                                Home
-                        </li>
-                    </a>
-                    
-                </ul>
-        </nav>
-</div>
-
-<div>
-        <nav class="header-search page-navigation">
-                <ul>
-                    <a href="#">
-                        <li>
-                                Search
-                        </li>
-                    </a>
-                </ul>
-        </nav>
-</div>
-
-<div>
-    <nav class="header-navigation page-navigation">
-        <ul>
-            
-            <a href="#">
-                    <li>
-                        News
-                    </li>
-            </a>
-            <a href="#">
-                    <li>
-                        Gallery
-                    </li>
-            </a>
-            <a href="#">
-                <li>
-                        About
-                </li>
-            </a>
-            <a href="#">
-                <li>
-                        Our Story
-                </li>
-            </a>
-
-            <a href="#">
-                    <li>
-                            Login Area
-                    </li>
-                </a>
-        </ul>
-    </nav>
-</div>
+version https://git-lfs.github.com/spec/v1
+oid sha256:9d38df7eaadc6a2fae00c211c7c6b2314e3446bc464c0be284160fc2ae6e93cf
+size 1315
