--- a/placeholders/header.html
+++ b/placeholders/header.html
@@ -1,9 +1,3 @@
-<header id="overlay-header">
-        <div class="placeholder-header">
-        </div>
-</header>
-
-<header id="normal-header">
-        <div class="placeholder-header">
-        </div>
-</header>
+version https://git-lfs.github.com/spec/v1
+oid sha256:c403e5084e92deccd449fb0a699beea168ba2de3cf9a8fc4b5c74c3bff0fde4f
+size 258
