--- a/information.html
+++ b/information.html
@@ -13,6 +13,9 @@
               href="./css/style.css">
 
         <link rel="stylesheet" 
+              href="./css/information_image.css">
+
+        <link rel="stylesheet" 
               href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" 
               integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" 
               crossorigin="anonymous">
@@ -63,7 +66,9 @@
         <main>
                 <div class="space-container">
                     <div class="image-cover-container">
-                        <img src="./images/info.png" />
+                        <div id="page_information_image">
+
+                        </div>
                     </div>
                 </div>
 
@@ -71,7 +76,7 @@
                     
                 <h1>
                         Information
-                    </h1>
+                </h1>
     
                     <section class="information-container image-to-left">
                         <img src="./images/7.png" />
