frontpage responsive image

--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <link rel="stylesheet"
               href="./css/style.css">
 
+              
+        <link rel="stylesheet" 
+              href="./css/front_image.css">
+
         <link rel="stylesheet"
               href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" 
               integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
@@ -67,7 +71,8 @@
         <main>
                 <div class="space-container">
                     <div class="image-cover-container">
-                        <img src="./images/intro.jpg" />
+                            <div id="page_front_image">
+                            </div>
                     </div>
                 </div>
 
