pages, now has placeholder divs for including generics

--- a/abonnement.html
+++ b/abonnement.html
@@ -25,8 +25,8 @@
     </head>
 
     <body>
-        <header id="load_header">
-        </header>
+        <div id="load_header">
+        </div>
 
         <main>
             <h1>Abonnement</h1>
@@ -89,8 +89,8 @@
             </div>
         </main>
         
-        <footer id="load_footer">
-        </footer>
+        <div id="load_footer">
+        </div>
             
         <script src="./scripts/generic_header.js" onload="loadHeaderArea();">
         </script>
