--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
     </head>
 
     <body>
-        <header id="load_header">
-        </header>
+        <div id="load_header">
+        </div >
 
 <!-- Actual Page-->
         <main>
@@ -76,8 +76,8 @@
         </main>
         <!-- End of Page-->
 
-        <footer id="load_footer">
-        </footer>
+        <div id="load_footer">
+        </div>
         
         <script src="./scripts/generic_header.js" onload="loadHeaderArea();">
         </script>
