--- a/generics/footer.html
+++ b/generics/footer.html
@@ -4,31 +4,31 @@
                 <a href="https://illvid.dk/"
                    hreflang="da">
                     <li>
-                        <img src="./images/illvid.png">
+                        <img src="./images/illvid.png"/>
                     </li>
                 </a>
                 <a href="http://www.au.dk/"
                    hreflang="da">
                     <li>
-                        <img src="./images/Aarhus-university.png">
+                        <img src="./images/Aarhus-university.png"/>
                     </li>
                 </a>
                 <a href="https://www.nasa.gov/"
                    hreflang="en">
                     <li>
-                        <img src="./images/nasa.png">
+                        <img src="./images/nasa.png"/>
                     </li>
                 </a>
                 <a href="https://www.easv.dk/da/"
                    hreflang="da">
                     <li>
-                        <img src="./images/easvlogo.png">
+                        <img src="./images/easvlogo.png"/>
                     </li>
                 </a>
                 <a href="https://www.ku.dk/"
                    hreflang="da">
                     <li>
-                        <img src="./images/ku_logo_dk_h.png">
+                        <img src="./images/ku_logo_dk_h.png"/>
                     </li>
                 </a>
             </ol>
