--- a/generics/footer.html
+++ b/generics/footer.html
@@ -1,34 +1,37 @@
 <footer>
         <div class="sponsored-by">
+            <p>
+                Coorporated with
+            </p>
             <ol>
                 <a href="https://illvid.dk/"
                    hreflang="da">
                     <li>
-                        <img src="./images/illvid.png"/>
+                        <img src="./images/illvid.png" alt="Illustreret videnskab"/>
                     </li>
                 </a>
                 <a href="http://www.au.dk/"
                    hreflang="da">
                     <li>
-                        <img src="./images/Aarhus-university.png"/>
+                        <img src="./images/Aarhus-university.png" alt="Arrhus Universitet"/>
                     </li>
                 </a>
                 <a href="https://www.nasa.gov/"
                    hreflang="en">
                     <li>
-                        <img src="./images/nasa.png"/>
+                        <img src="./images/nasa.png" alt="NASA"/>
                     </li>
                 </a>
                 <a href="https://www.easv.dk/da/"
                    hreflang="da">
                     <li>
-                        <img src="./images/easvlogo.png"/>
+                        <img src="./images/easvlogo.png" alt="Erhvervsakademi Sydvest"/>
                     </li>
                 </a>
                 <a href="https://www.ku.dk/"
                    hreflang="da">
                     <li>
-                        <img src="./images/ku_logo_dk_h.png"/>
+                        <img src="./images/ku_logo_dk_h.png" alt="Københavns Universitet"/>
                     </li>
                 </a>
             </ol>
