--- a/generics/footer.html
+++ b/generics/footer.html
@@ -7,31 +7,36 @@
                 <a href="https://illvid.dk/"
                    hreflang="da">
                     <li>
-                        <img src="./images/illvid.png" alt="Illustreret videnskab"/>
+                        <img src="./images/illvid.png"
+                             alt="Illustreret videnskab"/>
                     </li>
                 </a>
                 <a href="http://www.au.dk/"
                    hreflang="da">
                     <li>
-                        <img src="./images/Aarhus-university.png" alt="Arrhus Universitet"/>
+                        <img src="./images/Aarhus-university.png"
+                             alt="Arrhus Universitet"/>
                     </li>
                 </a>
                 <a href="https://www.nasa.gov/"
                    hreflang="en">
                     <li>
-                        <img src="./images/nasa.png" alt="NASA"/>
+                        <img src="./images/nasa.png"
+                             alt="NASA"/>
                     </li>
                 </a>
                 <a href="https://www.easv.dk/da/"
                    hreflang="da">
                     <li>
-                        <img src="./images/easvlogo.png" alt="Erhvervsakademi Sydvest"/>
+                        <img src="./images/easvlogo.png"
+                             alt="Erhvervsakademi Sydvest"/>
                     </li>
                 </a>
                 <a href="https://www.ku.dk/"
                    hreflang="da">
                     <li>
-                        <img src="./images/ku_logo_dk_h.png" alt="Københavns Universitet"/>
+                        <img src="./images/ku_logo_dk_h.png"
+                             alt="Københavns Universitet"/>
                     </li>
                 </a>
             </ol>
