--- a/generics/footer.html
+++ b/generics/footer.html
@@ -7,35 +7,35 @@
                 <a href="https://illvid.dk/"
                    hreflang="da">
                     <li>
-                        <img src="./images/illvid.png"
+                        <img src="./images/logo/illustreretvidenskab_logo.png"
                              alt="Illustreret videnskab"/>
                     </li>
                 </a>
                 <a href="http://www.au.dk/"
                    hreflang="da">
                     <li>
-                        <img src="./images/Aarhus-university.png"
-                             alt="Arrhus Universitet"/>
+                        <img src="./images/logo/aarhus_university_logo.png"
+                             alt="Århus Universitet"/>
                     </li>
                 </a>
                 <a href="https://www.nasa.gov/"
                    hreflang="en">
                     <li>
-                        <img src="./images/nasa.png"
+                        <img src="./images/logo/nasa_logo.png"
                              alt="NASA"/>
                     </li>
                 </a>
                 <a href="https://www.easv.dk/da/"
                    hreflang="da">
                     <li>
-                        <img src="./images/easvlogo.png"
+                        <img src="./images/logo/easvas_logo.png"
                              alt="Erhvervsakademi Sydvest"/>
                     </li>
                 </a>
                 <a href="https://www.ku.dk/"
                    hreflang="da">
                     <li>
-                        <img src="./images/ku_logo_dk_h.png"
+                        <img src="./images/logo/københavnsuniversitet_logo.png"
                              alt="Københavns Universitet"/>
                     </li>
                 </a>
