--- a/generics/footer.html
+++ b/generics/footer.html
@@ -41,9 +41,8 @@
                 </a>
             </ol>
         </div>
-
         <div class="footer-content">
-            <ol class="split-container">
+            <ol class="split-container">
                 <!-- Contact Information -->
                 <li class="contact-info">
                     <p>
