--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                 <div class="space-container">
                     <div class="image-cover-container">
                             <div id="page_front_image">
-                                <a href="#">
+                                <a href="./abonnement.html">
                                     <h4>
                                         Køb Abonnement
                                     </h4>
