--- a/nyheder.html
+++ b/nyheder.html
@@ -41,7 +41,7 @@
                                 <div class="news-half-card" style="background-image: url('./images/2.png');">
                                     <p>
                                         
-                                            Vrede astronomer anklager virksomhed for »rumgraffiti«
+                                            Vrede astronomer anklager virksomhed for rumgraffiti
                                     </p>
                                 </div> 
                             </a>
