--- a/login.html
+++ b/login.html
@@ -6,7 +6,7 @@
         <meta name="viewport"
               content="width=device-width, initial-scale=1.0">
 
-        <meta http-equiv="X-UA-Compatible" 
+        <meta http-equiv="X-UA-Compatible"
               content="ie=edge">
 
         <title>
@@ -28,9 +28,11 @@
     </head>
 
     <body>
+        <!-- Placeholder Header -->
         <div id="load_header">
         </div>
 
+        <!-- Actual Page-->
         <main>
             <h1>
                 Login
@@ -71,14 +73,18 @@
                 </div>
             </div>
         </main>
+        <!-- End of Page-->
 
+        <!-- Placeholder Footer -->
         <div  id="load_footer">
         </div >
 
-        <script src="./scripts/generic_header.js" onload="loadHeaderArea();">
+        <script src="./scripts/generic_header.js"
+                onload="loadHeaderArea();">
         </script>
 
-        <script src="./scripts/generic_footer.js" onload="loadFooterArea();">
+        <script src="./scripts/generic_footer.js"
+            onload="loadFooterArea();">
         </script>
     </body>
 
