--- a/index.html
+++ b/index.html
@@ -32,10 +32,12 @@
     </head>
 
     <body>
+
+        <!-- Placeholder Header -->
         <div id="load_header">
         </div >
 
-<!-- Actual Page-->
+        <!-- Actual Page-->
         <main>
                 <div class="space-container">
                     <div class="image-cover-container">
@@ -81,13 +83,17 @@
         </main>
         <!-- End of Page-->
 
+
+        <!-- Placeholder Footer -->
         <div id="load_footer">
         </div>
         
-        <script src="./scripts/generic_header.js" onload="loadHeaderArea();">
+        <script src="./scripts/generic_header.js"
+                onload="loadHeaderArea();">
         </script>
 
-        <script src="./scripts/generic_footer.js" onload="loadFooterArea();">
+        <script src="./scripts/generic_footer.js"
+                onload="loadFooterArea();">
         </script>
 
     </body>
