--- a/nyheder.html
+++ b/nyheder.html
@@ -113,11 +113,11 @@
         <div  id="load_footer">
         </div >
 
-        <script src="./scripts/generic_header.js" 
+        <script src="./scripts/generic_header.js"
                 onload="loadHeaderArea();">
         </script>
 
-        <script src="./scripts/generic_footer.js" ¨
+        <script src="./scripts/generic_footer.js"
                 onload="loadFooterArea();">
         </script>
     </body>
