--- a/login.html
+++ b/login.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
     <head>
+        <!-- Metadata -->
         <meta charset="UTF-8">
         
         <meta name="viewport"
@@ -13,14 +14,17 @@
             SPACE EDUCATION
         </title>
 
+        <!-- CSS -->
         <link rel="stylesheet"
               href="./css/style.css">
 
+        <!-- CSS Libraries -->
         <link rel="stylesheet"
               href="https://use.fontawesome.com/releases/v5.5.0/css/all.css"
               integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
               crossorigin="anonymous">
 
+        <!-- Scripts needed -->
         <script src="https://code.jquery.com/jquery-3.3.1.js"
                 integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
                 crossorigin="anonymous">
