--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                 <div class="space-container">
                     <div class="image-cover-container">
                             <div id="page_front_image">
+                                <div id="page_front_image_frame">
+
+                                </div>
                                 <a href="./abonnement.html">
                                     <h4>
                                         Køb Abonnement
