--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@
         <meta http-equiv="X-UA-Compatible"
               content="ie=edge">
 
-        <!--<meta http-equiv="refresh"
-              content="0; url=./sites/index.html"> -->
+        <!--  -->
+        <meta http-equiv="refresh"
+              content="0; url=./sites/index.html">
 
         <link rel="stylesheet" 
               href="./sites/css/status.css">
@@ -39,7 +40,7 @@
 
             <p>
 
-                we'll meet again, Hahn Solo.
+                we'll meet again, Han Solo.
             </p>
         </div>
     </body>
