--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
               integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
               crossorigin="anonymous">
 
+        <link href="https://fonts.googleapis.com/css?family=Open+Sans"
+              rel="stylesheet">
+
         <title>
             Highway 301: Redirect
         </title>
