--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
         <main>
                 <div class="error-message-redirect">
                         <div class="left-quote">
-                                <i class="fas fa-quote-left"></i>
+                            <i class="fas fa-quote-left">
+                            </i>
                         </div>
 
                         <h1 class="status-type-title">
@@ -52,7 +53,7 @@
                             hreflang="en">
                                 <p>
                                     Here let me guide your way.
-                                    In case chewbacca is drunk again.
+                                    In case chewbacca is drunk, again.
                                 </p>
                             </a>
             
