--- a/index.html
+++ b/index.html
@@ -53,12 +53,13 @@
                             hreflang="en">
                                 <p>
                                     Here let me guide your way.
-                                    In case chewbacca is drunk, again.
+                                    In case chewbacca is drunk, 
+                                    again.
                                 </p>
                             </a>
             
                             <p class="status-type-message">
-                                we'll meet again, Han Solo
+                                We'll meet again, Han Solo
                             </p>
                         </span>
             
