--- a/sites/Articles.html
+++ b/sites/Articles.html
@@ -10,7 +10,7 @@
               content="ie=edge">
 
         <title>
-            Space Education
+            Space Education: Articles
         </title>
     </head>
 
