--- a/sites/OurStory.html
+++ b/sites/OurStory.html
@@ -10,7 +10,7 @@
               content="ie=edge">
         
         <title>
-            Document
+            Space Education: Our Story
         </title>
     </head>
     <body>
