--- a/sites/Account.html
+++ b/sites/Account.html
@@ -10,7 +10,7 @@
               content="ie=edge">
 
         <title>
-            Document
+            Space Education: Account
         </title>
     </head>
 
