--- a/sites/index.html
+++ b/sites/index.html
@@ -10,7 +10,7 @@
               content="ie=edge">
 
         <title>
-            Space Education
+            Space Education: Home
         </title>
     </head>
     
