--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                                 This is not the death star your looking for.
                                 It's been moved to another galaxy.
                             </p>
-                            <a href="./sites/index.html"
+                            <a href="./sites/index.php"
                             hreflang="en">
                                 <p>
                                     Here let me guide your way.
