corrected url again....

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
               content="ie=edge">
 
         <meta http-equiv="refresh"
-              content="0; url=./sites/index.html">
+              content="0; url=./sites/index.php">
 
         <link rel="stylesheet" 
               href="./sites/css/status.css">
