--- a/sites/generics/Fonts.html
+++ b/sites/generics/Fonts.html
@@ -1,1 +1,6 @@
-<!-- -- Fonts.html -- -->
+<!-- -- Fonts.html |Roboto-- -->
+<link href="https://fonts.googleapis.com/css?family=Open+Sans"
+      rel="stylesheet">
+
+<link href="https://fonts.googleapis.com/css?family=Roboto"
+      rel="stylesheet">
