--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -1,4 +1,36 @@
 <!-- -- Header.html -- -->
 <header>
-    
+    <ul>
+        <a href="#">
+            <li>
+                <img alt="Home"/>
+            </li>
+        </a>
+        <a href="#">
+            <li>
+                Articles
+            </li>
+        </a>
+        <a href="#">
+            <li>
+                Insight
+            </li>
+        </a>
+        <a href="#">
+            <li>
+                Kontakt
+            </li>
+        </a>
+        
+        <a href="#">
+            <li>
+                Abonnement
+            </li>
+        </a>
+        <a href="#">
+            <li>
+                Profile
+            </li>
+        </a>
+    </ul>
 </header>
