--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -1,7 +1,7 @@
 <!-- -- Header.html -- -->
 <header>
     <ul>
-        <a href="#">
+        <a href="#" class="selected">
             <li>
                 <img alt="Home"/>
             </li>
