--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -1,6 +1,10 @@
 <!-- -- Header.html -- -->
 <header>
     <ul>
+        <div class="header-background">
+
+        </div>
+        
         <a href="#" class="selected">
             <li>
                 <img alt="Home"/>
