--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -1,20 +1,20 @@
 <!-- -- Header.html -- -->
 <header>
     <ul>
-        
-        <a href="#" class="selected">
+        <a href="./index.php"
+           class="selected">
             <li>
                 <img alt="Home"/>
             </li>
         </a>
 
-        <a href="#">
+        <a href="./Articles.php">
             <li>
-                Articles
+                Artikler
             </li>
         </a>
 
-        <a href="#">
+        <a href="./Insight.php">
             <li>
                 Insight
             </li>
@@ -32,7 +32,7 @@
             </li>
         </a>
         
-        <a href="#">
+        <a href="./Account.php">
             <li>
                 Profile
             </li>
