--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -19,12 +19,6 @@
                 Insight
             </li>
         </a>
-
-        <a href="#">
-            <li>
-                Kontakt
-            </li>
-        </a>
         
         <a href="#">
             <li>
@@ -34,7 +28,7 @@
         
         <a href="./Account.php">
             <li>
-                Profile
+                Profil
             </li>
         </a>
     </ul>
