container areas added to footer

--- a/sites/generics/Footer.html
+++ b/sites/generics/Footer.html
@@ -1,5 +1,24 @@
 <!-- -- Footer.html -- -->
 <footer>
+
+    <div class="container-area-3">
+        <!-- Social Media -->
+        <div class="container-area">
+
+        </div>
+
+        
+        <!-- ? -->
+        <div class="container-area">
+
+        </div>
+
+        <!-- Social Media -->
+        <div class="container-area">
+
+        </div>
+    </div>
+
     <div class="footer-misc">
         <p>
             Copyright 2018 Space Education.
