--- a/sites/generics/Footer.html
+++ b/sites/generics/Footer.html
@@ -2,7 +2,7 @@
 <footer>
 
     <div class="container-area-3">
-        <!-- Social Media -->
+        <!-- Contact -->
         <div class="container-area">
 
         </div>
