--- a/sites/generics/Footer.html
+++ b/sites/generics/Footer.html
@@ -4,6 +4,19 @@
     <div class="container-area-3">
         <!-- Contact -->
         <div class="container-area">
+            <div class="footer-contact">
+                <p>
+                    Spangsbjerg Kirkevej 103, 6700 Esbjerg, Danmark
+                </p>
+                
+                <p>
+                    +45 7613 3200 
+                </p>
+
+                <p>
+                    Mail : contact@spaced.com 
+                </p>
+            </div>
 
         </div>
 
