--- a/sites/generics/Footer.html
+++ b/sites/generics/Footer.html
@@ -13,9 +13,11 @@
                     +45 7613 3200 
                 </p>
 
-                <p>
-                    Mail : contact@spaced.com 
-                </p>
+                <a href="mailto:contact@spaced.com">
+                    <p>
+                        contact@spaced.com 
+                    </p>
+                </a>
             </div>
 
         </div>
