--- a/sites/generics/Footer.html
+++ b/sites/generics/Footer.html
@@ -13,7 +13,7 @@
                     +45 7613 3200 
                 </p>
 
-                <a href="mailto:contact@spaced.com">
+                <a href="mailto:contact@spaced.com" class="mail">
                     <p>
                         contact@spaced.com 
                     </p>
