--- a/sites/generics/Footer.html
+++ b/sites/generics/Footer.html
@@ -8,21 +8,20 @@
                 <p>
                     Spangsbjerg Kirkevej 103, 6700 Esbjerg, Danmark
                 </p>
-                
+
                 <p>
-                    +45 7613 3200 
+                    +45 7613 3200
                 </p>
 
-                <a href="mailto:contact@spaced.com" class="mail">
+                <a href="mailto:contact@spaced.com"
+                   class="mail">
                     <p>
-                        contact@spaced.com 
+                        contact@spaced.com
                     </p>
                 </a>
             </div>
-
         </div>
 
-        
         <!-- ? -->
         <div class="container-area">
 
@@ -30,7 +29,39 @@
 
         <!-- Social Media -->
         <div class="container-area">
+            <div class="footer-social">
+                <ul>
+                    <a href="#">
+                        <li>
+                            <i class="fab fa-facebook">
+                            </i>
+                        </li>
+                    </a>
 
+                    <a href="#">
+                        <li>
+                            <i class="fab fa-instagram">
+                            </i>
+                        </li>
+                    </a>
+
+                    <a href="#">
+                        <li>
+                            <i class="fab fa-twitter-square">
+                            </i>
+                        </li>
+                    </a>
+
+                    <a href="#">
+                        <li>
+                            <i class="fab fa-instagram">
+                            </i>
+                        </li>
+                    </a>
+
+
+                </ul>
+            </div>
         </div>
     </div>
 
