--- a/sites/generics/Footer.html
+++ b/sites/generics/Footer.html
@@ -32,29 +32,29 @@
             <div class="footer-social">
                 <ul>
                     <a href="#">
-                        <li>
+                        <li class="facebook">
                             <i class="fab fa-facebook">
                             </i>
                         </li>
                     </a>
 
                     <a href="#">
-                        <li>
+                        <li class="instagram">
                             <i class="fab fa-instagram">
                             </i>
                         </li>
                     </a>
 
                     <a href="#">
-                        <li>
+                        <li class="twitter">
                             <i class="fab fa-twitter-square">
                             </i>
                         </li>
                     </a>
 
                     <a href="#">
-                        <li>
-                            <i class="fab fa-instagram">
+                        <li class="youtube">
+                            <i class="fab fa-youtube">
                             </i>
                         </li>
                     </a>
