--- a/sites/generics/Footer.html
+++ b/sites/generics/Footer.html
@@ -112,7 +112,7 @@
             </a>
         </ul>
         <p>
-            Copyright 2018 Space Education.
+            Copyright 2018 Space Education
         </p>
     </div>
 </footer>
