--- a/sites/generics/Footer.html
+++ b/sites/generics/Footer.html
@@ -31,28 +31,28 @@
         <div class="container-area">
             <div class="footer-social">
                 <ul>
-                    <a href="#">
+                    <a href="https://www.facebook.com/">
                         <li class="facebook">
                             <i class="fab fa-facebook">
                             </i>
                         </li>
                     </a>
 
-                    <a href="#">
+                    <a href="https://www.instagram.com">
                         <li class="instagram">
                             <i class="fab fa-instagram">
                             </i>
                         </li>
                     </a>
 
-                    <a href="#">
+                    <a href="https://twitter.com">
                         <li class="twitter">
                             <i class="fab fa-twitter-square">
                             </i>
                         </li>
                     </a>
 
-                    <a href="#">
+                    <a href="https://www.youtube.com/">
                         <li class="youtube">
                             <i class="fab fa-youtube">
                             </i>
