--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -4,4 +4,15 @@
 
     </div>
 
+    <div class="container-area-3">
+        <div class="container-area">
+
+        </div>
+        <div class="container-area">
+
+        </div>
+        <div class="container-area">
+
+        </div>
+    </div>
 </div>
