--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -6,13 +6,13 @@
 
     <div class="container-area-3">
         <div class="container-area">
-
+            <p>Test A</p>
         </div>
         <div class="container-area">
-
+            <p>Test B</p>
         </div>
         <div class="container-area">
-
+            <p>Test C</p>
         </div>
     </div>
 </div>
