--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -1,6 +1,6 @@
 <!-- Index.html -->
 <div class="cover-container">
-    <div class="cover-container-homepage">
+    <div id="cover-container-homepage">
 
     </div>
 
