--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -8,12 +8,25 @@
 
 <div class="container-area-3">
     <div class="container-area">
-        <p>Test A</p>
+        <!--  -->
+        <div class="container-short-description">
+            <i class="fab fa-leanpub">
+            </i>
+        </div>
     </div>
     <div class="container-area">
-        <p>Test B</p>
+        <!--  -->
+        <div class="container-short-description">
+            <i class="fas fa-chalkboard-teacher">
+            </i>
+        </div>
     </div>
     <div class="container-area">
-        <p>Test C</p>
+        <!--  -->
+        <div class="container-short-description">
+            <i class="fas fa-stopwatch">
+            </i>
+        </div>
+        
     </div>
 </div>
