--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -13,7 +13,7 @@
             <i class="fab fa-leanpub">
             </i>
             <p>
-
+                Målet for os, som virkshomhed er at uddybe folks forståelle af universet.
             </p>
         </div>
     </div>
@@ -23,7 +23,7 @@
             <i class="fas fa-chalkboard-teacher">
             </i>
             <p>
-
+                Lavet til og for undervisning til gymnasielle og universitets niveau.
             </p>
         </div>
     </div>
@@ -33,7 +33,7 @@
             <i class="fas fa-stopwatch">
             </i>
             <p>
-                
+                Kort og Simpelt materiale. Som gør det nemt for dig at læse.
             </p>
         </div>
         
