--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -33,7 +33,7 @@
             <i class="fas fa-stopwatch">
             </i>
             <p>
-                Kort og Simpelt materiale. Som gør det nemt for dig at læse.
+                Kort og Simpelt materiale. Som er nemt for dig at læse og referere til.
             </p>
         </div>
         
