--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -23,7 +23,7 @@
             <i class="fas fa-chalkboard-teacher">
             </i>
             <p>
-                Lavet til og for undervisning til gymnasielle og universitets niveau.
+                Lavet for undervisning til gymnasielle og universitets niveau.
             </p>
         </div>
     </div>
