--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -6,6 +6,7 @@
 
 </div>
 
+<!--  -->
 <div class="container-area-3">
     <div class="container-area">
         <!--  -->
@@ -33,9 +34,13 @@
             <i class="fas fa-stopwatch">
             </i>
             <p>
-                Kort og Simpelt materiale. Som er nemt for dig at læse og referere til.
+                Kort og Simpelt materiale. Som er nemt for dig at læse og referere til. Uden at skulle have en academisk baggrund.
             </p>
         </div>
-        
     </div>
+</div>
+
+<!-- coorporation  -->
+<div>
+
 </div>
