--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -7,40 +7,50 @@
 </div>
 
 <!--  -->
-<div class="container-area-3">
-    <div class="container-area">
-        <!--  -->
-        <div class="container-short-description">
-            <i class="fab fa-leanpub">
-            </i>
-            <p>
-                Målet for os, som virkshomhed er at uddybe folks forståelle af universet.
-            </p>
+<div class="area">
+    <div class="container-area-3">
+        <div class="container-area">
+            <!--  -->
+            <div class="container-short-description">
+                <i class="fab fa-leanpub">
+                </i>
+                <p>
+                    Målet for os, som virkshomhed er at uddybe folks forståelle af universet.
+                </p>
+            </div>
         </div>
-    </div>
-    <div class="container-area">
-        <!--  -->
-        <div class="container-short-description">
-            <i class="fas fa-chalkboard-teacher">
-            </i>
-            <p>
-                Lavet for undervisning til gymnasielle og universitets niveau.
-            </p>
+        <div class="container-area">
+            <!--  -->
+            <div class="container-short-description">
+                <i class="fas fa-chalkboard-teacher">
+                </i>
+                <p>
+                    Lavet for undervisning til gymnasielle og universitets niveau.
+                </p>
+            </div>
         </div>
-    </div>
-    <div class="container-area">
-        <!--  -->
-        <div class="container-short-description">
-            <i class="fas fa-stopwatch">
-            </i>
-            <p>
-                Kort og Simpelt materiale. Som er nemt for dig at læse og referere til. Uden at skulle have en academisk baggrund.
-            </p>
+        <div class="container-area">
+            <!--  -->
+            <div class="container-short-description">
+                <i class="fas fa-stopwatch">
+                </i>
+                <p>
+                    Kort og Simpelt materiale. Som er nemt for dig at læse og referere til. Uden at skulle have en academisk baggrund.
+                </p>
+            </div>
         </div>
     </div>
 </div>
 
-<!-- coorporation  -->
-<div>
+<!-- coorporation with  -->
+<div class="">
 
 </div>
+
+<!-- About us  -->
+<div class="">
+
+</div>
+    
+    
+
