--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -43,8 +43,26 @@
 </div>
 
 <!-- coorporation with  -->
-<div class="">
+<div class="area">
+    <div class="cooperation">
+        <ul>
+            <a href="#">
+                <li>
 
+                </li>
+            </a>
+            <a href="#">
+                <li>
+                        
+                </li>
+            </a>
+            <a href="#">
+                <li>
+                        
+                </li>
+            </a>
+        </ul>
+    </div>
 </div>
 
 <!-- About us  -->
