--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -49,35 +49,28 @@
             <!-- EASV Sydvest -->
             <a href="#">
                 <li>
-                    <img alt=""/>
+                    <img alt="EASV Sydvest"/>
                 </li>
             </a>
 
             <!-- Illustreret Videnskab -->
             <a href="#">
                 <li>
-                    <img alt=""/>
+                    <img alt="Illustreret Videnskab"/>
                 </li>
             </a>
 
             <!-- Københavns Universitet -->
             <a href="#">
                 <li>
-                    <img alt=""/>
+                    <img alt="Københavns Universitet"/>
                 </li>
             </a>
             
             <!-- Nasa Logo -->
             <a href="#">
                 <li>
-                    <img alt=""/>
-                </li>
-            </a>
-
-            <!-- Nasa Logo -->
-            <a href="#">
-                <li>
-                    <img alt=""/>
+                    <img alt="Nasa"/>
                 </li>
             </a>
         </ul>
