--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -49,28 +49,39 @@
             <!-- EASV Sydvest -->
             <a href="#">
                 <li>
-                    <img alt="EASV Sydvest"/>
+                    <img alt="EASV Sydvest"
+                         src="./images/homepage/logo/easvas_logo.png"/>
                 </li>
             </a>
 
             <!-- Illustreret Videnskab -->
             <a href="#">
                 <li>
-                    <img alt="Illustreret Videnskab"/>
+                    <img alt="Illustreret Videnskab"
+                         src="./images/homepage/logo/illustreretvidenskab_logo.png"/>
                 </li>
             </a>
 
             <!-- Københavns Universitet -->
             <a href="#">
                 <li>
-                    <img alt="Københavns Universitet"/>
+                    <img alt="Københavns Universitet" 
+                         src="./images/homepage/logo/københavnsuniversitet_logo.png"/>
                 </li>
             </a>
+
+            <!-- Århus Universitet -->
+            <a href="#">
+                    <li>
+                        <img alt="Aarhus Universitet" 
+                             src="./images/homepage/logo/aarhus_university_logo.png"/>
+                    </li>
+                </a>
             
             <!-- Nasa Logo -->
             <a href="#">
                 <li>
-                    <img alt="Nasa"/>
+                    <img alt="Nasa" src="./images/homepage/logo/nasa_logo.png"/>
                 </li>
             </a>
         </ul>
