--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -46,44 +46,50 @@
 <div class="area">
     <div class="cooperation">
         <ul>
-            <!-- EASV Sydvest -->
-            <a href="#">
-                <li>
-                    <img alt="EASV Sydvest"
-                         src="./images/homepage/logo/easvas_logo.png"/>
-                </li>
-            </a>
-
+            <div class="horizontal-center"> 
+                <!-- EASV Sydvest -->
+                <a href="#">
+                    <li>
+                        <img alt="EASV Sydvest"
+                        src="./images/homepage/logo/easvas_logo.png"/>
+                    </li>
+                </a>
+            </div>
             <!-- Illustreret Videnskab -->
-            <a href="#">
-                <li>
-                    <img alt="Illustreret Videnskab"
-                         src="./images/homepage/logo/illustreretvidenskab_logo.png"/>
-                </li>
-            </a>
-
+            <div class="horizontal-center">
+                <a href="#">
+                    <li>
+                        <img alt="Illustreret Videnskab"
+                        src="./images/homepage/logo/illustreretvidenskab_logo.png"/>
+                    </li>
+                </a>
+            </div>
             <!-- Københavns Universitet -->
-            <a href="#">
-                <li>
-                    <img alt="Københavns Universitet" 
-                         src="./images/homepage/logo/københavnsuniversitet_logo.png"/>
-                </li>
-            </a>
-
+            <div class="horizontal-center">
+                <a href="#">
+                    <li>
+                        <img alt="Københavns Universitet" 
+                        src="./images/homepage/logo/københavnsuniversitet_logo.png"/>
+                    </li>
+                </a>
+            </div>
             <!-- Århus Universitet -->
-            <a href="#">
+            <div class="horizontal-center">
+                <a href="#">
                     <li>
                         <img alt="Aarhus Universitet" 
                              src="./images/homepage/logo/aarhus_university_logo.png"/>
                     </li>
                 </a>
-            
+            </div>
             <!-- Nasa Logo -->
-            <a href="#">
-                <li>
-                    <img alt="Nasa" src="./images/homepage/logo/nasa_logo.png"/>
-                </li>
-            </a>
+            <div class="horizontal-center">
+                <a href="#">
+                    <li>
+                        <img alt="Nasa" src="./images/homepage/logo/nasa_logo.png"/>
+                    </li>
+                </a>
+            </div>
         </ul>
     </div>
 </div>
