--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -44,7 +44,7 @@
 
 <!-- coorporation with  -->
 <div class="area">
-    <div class="cooperation">
+    <div class="cooperation-box">
         <ul>
             <div class="horizontal-center"> 
                 <!-- EASV Sydvest -->
