--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -44,6 +44,9 @@
 
 <!-- coorporation with  -->
 <div class="area">
+    <p>
+        Coorporated with:
+    </p>
     <div class="cooperation">
         <ul>
             <div class="horizontal-center"> 
