--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -47,7 +47,7 @@
     <p>
         Coorporated with:
     </p>
-    <div class="cooperation">
+    <div class="cooperation_with">
         <ul>
             <div class="horizontal-center"> 
                 <!-- EASV Sydvest -->
