--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -44,56 +44,58 @@
 
 <!-- coorporation with  -->
 <div class="area">
-    <p>
-        Coorporated with:
-    </p>
-    <div class="cooperation_with">
-        <ul>
-            <div class="horizontal-center"> 
-                <!-- EASV Sydvest -->
-                <a href="#">
-                    <li>
-                        <img alt="EASV Sydvest"
-                        src="./images/homepage/logo/easvas_logo.png"/>
-                    </li>
-                </a>
-            </div>
-            <!-- Illustreret Videnskab -->
-            <div class="horizontal-center">
-                <a href="#">
-                    <li>
-                        <img alt="Illustreret Videnskab"
-                        src="./images/homepage/logo/illustreretvidenskab_logo.png"/>
-                    </li>
-                </a>
-            </div>
-            <!-- Københavns Universitet -->
-            <div class="horizontal-center">
-                <a href="#">
-                    <li>
-                        <img alt="Københavns Universitet" 
-                        src="./images/homepage/logo/københavnsuniversitet_logo.png"/>
-                    </li>
-                </a>
-            </div>
-            <!-- Århus Universitet -->
-            <div class="horizontal-center">
-                <a href="#">
-                    <li>
-                        <img alt="Aarhus Universitet" 
-                             src="./images/homepage/logo/aarhus_university_logo.png"/>
-                    </li>
-                </a>
-            </div>
-            <!-- Nasa Logo -->
-            <div class="horizontal-center">
-                <a href="#">
-                    <li>
-                        <img alt="Nasa" src="./images/homepage/logo/nasa_logo.png"/>
-                    </li>
-                </a>
-            </div>
-        </ul>
+    <div class="cooperation_area">
+        <p>
+            Coorporated with:
+        </p>
+        <div class="cooperation_with">
+            <ul>
+                <div class="horizontal-center"> 
+                    <!-- EASV Sydvest -->
+                    <a href="#">
+                        <li>
+                            <img alt="EASV Sydvest"
+                            src="./images/homepage/logo/easvas_logo.png"/>
+                        </li>
+                    </a>
+                </div>
+                <!-- Illustreret Videnskab -->
+                <div class="horizontal-center">
+                    <a href="#">
+                        <li>
+                            <img alt="Illustreret Videnskab"
+                            src="./images/homepage/logo/illustreretvidenskab_logo.png"/>
+                        </li>
+                    </a>
+                </div>
+                <!-- Københavns Universitet -->
+                <div class="horizontal-center">
+                    <a href="#">
+                        <li>
+                            <img alt="Københavns Universitet" 
+                            src="./images/homepage/logo/københavnsuniversitet_logo.png"/>
+                        </li>
+                    </a>
+                </div>
+                <!-- Århus Universitet -->
+                <div class="horizontal-center">
+                    <a href="#">
+                        <li>
+                            <img alt="Aarhus Universitet" 
+                                src="./images/homepage/logo/aarhus_university_logo.png"/>
+                        </li>
+                    </a>
+                </div>
+                <!-- Nasa Logo -->
+                <div class="horizontal-center">
+                    <a href="#">
+                        <li>
+                            <img alt="Nasa" src="./images/homepage/logo/nasa_logo.png"/>
+                        </li>
+                    </a>
+                </div>
+            </ul>
+        </div>
     </div>
 </div>
 
