--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -52,16 +52,16 @@
             <ul>
                 <div class="horizontal-center"> 
                     <!-- EASV Sydvest -->
-                    <a href="#">
+                    <a href="https://www.easv.dk/da/">
                         <li>
                             <img alt="EASV Sydvest"
-                            src="./images/homepage/logo/easvas_logo.png"/>
+                                 src="./images/homepage/logo/easvas_logo.png"/>
                         </li>
                     </a>
                 </div>
                 <!-- Illustreret Videnskab -->
                 <div class="horizontal-center">
-                    <a href="#">
+                    <a href="https://illvid.dk/">
                         <li>
                             <img alt="Illustreret Videnskab"
                             src="./images/homepage/logo/illustreretvidenskab_logo.png"/>
@@ -70,7 +70,7 @@
                 </div>
                 <!-- Københavns Universitet -->
                 <div class="horizontal-center">
-                    <a href="#">
+                    <a href="https://www.ku.dk/">
                         <li>
                             <img alt="Københavns Universitet" 
                             src="./images/homepage/logo/københavnsuniversitet_logo.png"/>
@@ -79,7 +79,7 @@
                 </div>
                 <!-- Århus Universitet -->
                 <div class="horizontal-center">
-                    <a href="#">
+                    <a href="https://www.au.dk/">
                         <li>
                             <img alt="Aarhus Universitet" 
                                 src="./images/homepage/logo/aarhus_university_logo.png"/>
@@ -88,7 +88,7 @@
                 </div>
                 <!-- Nasa Logo -->
                 <div class="horizontal-center">
-                    <a href="#">
+                    <a href="https://www.nasa.gov/">
                         <li>
                             <img alt="Nasa" src="./images/homepage/logo/nasa_logo.png"/>
                         </li>
