--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -46,7 +46,7 @@
 <div class="area">
     <div class="cooperation_area">
         <p>
-            Coorporated with:
+            I samarbejde med
         </p>
         <div class="cooperation_with">
             <ul>
