--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -100,8 +100,19 @@
 </div>
 
 <!-- About us  -->
-<div class="">
+<!-- Ændre senere-->
+<div class="area">
+    <div class="about_us_area">
+        <span class="center">
+            <p>
+                Hvem vi er
+            </p>
+            <p>
+                Vi er en virksomhed med en stor passion for astronomi og det ydre rum. Vores klogeste hjerner fra Århus Universitet, København Universitet og Erhvervsakademi Sydvest er altid  klar for at skabe en god platform i rummet-undervisning for alle niveauer.
+            </p>
+        </span>
 
+    </div>
 </div>
     
     
