--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -104,7 +104,7 @@
 <div class="area">
     <div class="about_us_area">
         <span class="center">
-            <p>
+            <p class="title">
                 Hvem vi er
             </p>
             <p>
