--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -45,7 +45,7 @@
 <!-- coorporation with  -->
 <div class="area">
     <div class="cooperation_area">
-        <p>
+        <p class="title">
             I samarbejde med
         </p>
         <div class="cooperation_with">
