--- a/sites/generics/Footer.html
+++ b/sites/generics/Footer.html
@@ -5,7 +5,8 @@
         <div class="container-area">
             <div class="footer-contact">
                 <p>
-                    Spangsbjerg Kirkevej 103, 6700 Esbjerg, Danmark
+                    Spangsbjerg Kirkevej 103, </br> 
+                    6700 Esbjerg, Danmark
                 </p>
                 <p>
                     +45 7613 3200
