--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -35,7 +35,7 @@
                 <i class="fas fa-stopwatch">
                 </i>
                 <p>
-                    Kort og Simpelt materiale. Som er nemt for dig at læse og referere til. Uden at skulle have en academisk baggrund.
+                    Kort og Simpelt materiale. Der er letlæselig og behøver ikke en academisk baggrund.
                 </p>
             </div>
         </div>
