--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -35,7 +35,8 @@
                 <i class="fas fa-stopwatch">
                 </i>
                 <p>
-                    Kort og Simpelt materiale. Der er letlæselig og behøver ikke en academisk baggrund.
+                    Kort og Simpelt materiale. </br>
+                    Der er letlæseligt og behøver ikke en academisk baggrund.
                 </p>
             </div>
         </div>
