--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -36,7 +36,7 @@
                 </i>
                 <p>
                     Kort og Simpelt materiale. </br>
-                    Der er letlæseligt og behøver ikke en academisk baggrund.
+                    Som ikke kræver en academisk baggrund.
                 </p>
             </div>
         </div>
