--- a/sites/content/index.html
+++ b/sites/content/index.html
@@ -35,7 +35,7 @@
                 <i class="fas fa-stopwatch">
                 </i>
                 <p>
-                    Kort og Simpelt materiale. </br>
+                    Kort, Simpelt og letlæseligt materiale. </br>
                     Som ikke kræver en academisk baggrund.
                 </p>
             </div>
