--- a/sites/generics/Header.html
+++ b/sites/generics/Header.html
@@ -1,5 +1,5 @@
 <!-- -- Header.html -- -->
-<header id="header-overlay">
+<header>
     <ul>
         <!-- class="selected" -->
         <a id="header_home_link"
